<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atmconsultoria.studio.com.br.atm_consultoria.ClienteActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_cliente"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente1"
        android:layout_marginTop="28dp"
        android:id="@+id/imageView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp" />

    <TextView
        android:text="@string/sys_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColor="@android:color/black"
        android:layout_below="@+id/imageView5"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente2"
        android:layout_marginTop="52dp"
        android:id="@+id/imageView6"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5" />

    <TextView
        android:text="@string/rsm_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_below="@+id/imageView6"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4" />

    <TextView
        android:text="@string/texto_nossoClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/empresa_detalhe"
        android:layout_marginBottom="23dp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />
</RelativeLayout>
